--- a/index.html
+++ b/index.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/index.css"/>
+    <title>Wireframe Option 2</title>
 </head>
 <body>
-    
+    <header>
+        <nav>   
+            <h1>ALICESON PHILLIPS</h1>
+            <links>
+                <button><a href="index.html">Home</a></button>
+                <button><a href="about.html">About</a></button>
+                <button><a href="contact.html">Contact</a></button>
+                <button><a href="projects.html">Projects</a></button>
+            </links>
+            </nav>
+
+    </header>
+    <section class="top">
+        <button class="image-button">
+            <h1>ALICESON PHILLIPS</h1>
+            <a href="projects.html">My Portfolio</a></button>
+
+</section>
+    <section class="row">
+        <div class="portfolio">
+            <img src="https://picsum.photos/200"/>
+            <p>Picture 1</p>
+        </div>
+        <div class="portfolio">
+            <img src="https://picsum.photos/200"/>
+            <p>Picture 2</p>
+        </div>
+        <div class="portfolio">
+            <img src="https://picsum.photos/200"/>
+            <p>Picture 3</p>
+        </div>
+    </section>
+    <section class="row">
+        <div class="portfolio">
+            <img src="https://picsum.photos/200"/>
+            <p>Picture 4</p>
+        </div>
+        <div class="portfolio">
+            <img src="https://picsum.photos/200"/>
+            <p>Picture 5</p>
+        </div>
+        <div class="portfolio">
+            <img src="https://picsum.photos/200"/>
+            <p>Picture 6</p>
+        </div>
+    </section>
+    <footer>
+        <button class="contact">
+            <a href="contact.html">Contact Me</a>
+        </button>
+    </footer>
 </body>
 </html>
