--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <header>
         <nav>   
             <h1>ALICESON PHILLIPS</h1>
-            <links>
+            <div class="links">
                 <button><a href="index.html">Home</a></button>
                 <button><a href="about.html">About</a></button>
                 <button><a href="contact.html">Contact</a></button>
                 <button><a href="projects.html">Projects</a></button>
-            </links>
+            </div>
             </nav>
 
     </header>
     <section class="top">
-        <button class="image-button">
-            <h1>ALICESON PHILLIPS</h1>
-            <a href="projects.html">My Portfolio</a></button>
-
+        <div>
+              <h1>ALICESON PHILLIPS</h1><br>
+            <a href="projects.html"><button>My Portfolio</button></a>
+        </div>
 </section>
     <section class="row">
         <div class="portfolio">
@@ -40,8 +40,6 @@
             <img src="https://picsum.photos/200"/>
             <p>Picture 3</p>
         </div>
-    </section>
-    <section class="row">
         <div class="portfolio">
             <img src="https://picsum.photos/200"/>
             <p>Picture 4</p>
